# CubeSolverWithDeepLerning

./: CMakeLists.txt  Cube.cpp  Cube.h  CubeSolver.cpp  CubeSolver.h  Dense.cpp  Dense.h  InputLayer.h  LayerLeakyReLU.cpp  LayerLeakyReLU.h  LayerSoftmax.cpp  LayerSoftmax.h  Model.cpp  Model.h  README.md  SetOfActivationFun.cpp  main.cpp
ActivationFunctions/: SetOfActivationFun.cpp  SetOfActivationFun.h
Cube/: Cube.cpp  Cube.h  CubeRotationSupportForStupidMe.cpp  CubeRotationSupportForStupidMe.h
CubeSolver/: CubeSolver.cpp  CubeSolver.h
Dense'sData/: dense1.txt  dense4.txt  densePolicy.txt
Graphix/: FragmentCube.cpp  FragmentCube.h  RubikCube.cpp  RubikCube.h  initGraphics.cpp  initGraphics.h
Layers/: Dense.cpp  Dense.h  InputLayer.cpp  LayerLeakyReLU.cpp  LayerLeakyReLU.h  LayerSoftmax.cpp  LayerSoftmax.h
Model/: Model.cpp  Model.h
